[package]
name = "interpn"
version = "0.5.0"
edition = "2024"
authors = ["James Logan <jlogan03@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jlogan03/interpn/"
homepage = "https://github.com/jlogan03/interpn/interpn"
description = "N-dimensional interpolation/extrapolation methods, no-std and no-alloc compatible."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = { version = "0.2.19", default-features = false, features = ["libm"] }
itertools = { version = "0.14.0", optional = true }
crunchy = { version = "0.2.4", default-features = false, features = ["limit_256"] }

[dev-dependencies]
rand = "0.9.2"
criterion = "0.5.1"
ndarray = "0.16.1"

[features]
default = ["std"]
std = ["itertools"]

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"
